# colisions

./: CMakeLists.txt
include/: glfw_aux.hpp  shader.hpp
src/: main.cpp
